[package]
name = "parse-tle"
version = "0.1.4"
edition = "2021"
description = "Parse two line element set"
license = "MIT"
keywords = ["astrodynamics", "astronomy", "satellites"]
repository = "https://github.com/Thomas-Oz-Dunn/parse-tle"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
error-chain = "0.12.4"
hifitime = "3.8.4"
reqwest = { version = "0.11.22", features = ["blocking"] }

[[bin]]
name = "parse_tle"
path = "src/main.rs"

