[package]
name = "parse-tle"
version = "0.1.7"
edition = "2021"
description = "Parse two line element set"
license = "MIT"
keywords = ["astrodynamics", "astronomy", "satellites"]
repository = "https://github.com/Thomas-Oz-Dunn/parse-tle"

[dependencies]
serde =  { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4.6", features = ["derive"] }
error-chain = "0.12.4"
hifitime = "3.8.4"
reqwest = { version = "0.11.22", features = ["blocking"] }

[[bin]]
name = "parse_tle"
path = "src/main.rs"
